app-1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-x
  labels:
    istio-injection: enabled
    app: app-x
