app-4-vs.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-x
  namespace: app-x
  labels:
    app: app-x
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http-router
  selector:
    app: app-x
---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: app-x
  namespace: app-x
spec:
  servers:
    - hosts:
        - app-x.faasl.local
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: app-x
  namespace: app-x
spec:
  hosts:
    - app-x.faasl.local
  gateways:
    - app-x
  http:
    - match:
        - uri:
            prefix: /fib
      route:
        - destination:
            host: app-x
            port:
              number: 8000
      name: app-x-route
      retries:
        attempts: 10
        perTryTimeout: 1s
        retryOn: 5xx
---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: app-x
   namespace: app-x
 spec:
   host: app-x
   trafficPolicy:
     tls:
       mode: ISTIO_MUTUAL
     loadBalancer:
       consistentHash:
         httpHeaderName: tenant-id
